--- a/client/app/expense/expense.html
+++ b/client/app/expense/expense.html
@@ -1,26 +1,11 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div class="col-md-12">
-This is the expense view.
+<md-content class="md-padding">
 
-<!-- <div class="container">
-  <form class="expense-form" ng-submit="addExpense()" name="expenseForm">
-    <input ng-model="newExpense.description"  placeholder="description" required><br/>
-    <input ng-model="newExpense.category" placeholder="category" required><br/>
-    <input ng-model="newExpense.date" placeholder="date" required><br/>
-    <input ng-model="newExpense.amount" placeholder="amount" required><br/>
-    <input class="btn btn-primary" type="submit" ng-disabled="expenseForm.$invalid" value="Add Expense">
-  </form>
-</div>-->
-
-
-  <!--<div ng-controller="AppCtrl" class="md-padding" id="popupContainer">
-
-  </div>-->
-
-
+<md-card>
   <md-data-table-container>
-    <table md-data-table md-row-select="selected" md-progress="deferred">
-      <thead md-order="query.order" md-trigger="onOrderChange">
+    <h1>Expenses</h1>
+    <table md-data-table><!--md-row-select="selected" md-progress="deferred">-->
+      <thead> <!--md-order="query.order" md-trigger="onOrderChange">-->
       <tr>
         <th name="Description"></th>
         <th name="Category"></th>
@@ -34,12 +19,17 @@ This is the expense view.
         <td>{{expense.category}}</td>
         <td>{{expense.date|date}}</td>
         <td>{{expense.amount|currency}}</td>
-        <td><md-button class="md-fab md-warn" ng-click="deleteExpense(expense._id)">del</md-button></td>
-        <td><md-button class="md-fab md-primary md-raised" ng-click="editExpense(expense._id)" ng-disabled="true">edit</md-button></td>
-
+        <td>
+          <md-button class="md-fab md-warn" ng-click="deleteExpense(expense._id)">del</md-button>
+        </td>
+        <td>
+          <md-button class="md-fab md-primary md-raised" ng-click="setSelected(expense._id);showEdit($event)" ng-disabled="false">edit
+          </md-button>
+        </td>
       </tr>
       </tbody>
     </table>
   </md-data-table-container>
-  <md-button  class="md-primary md-raised" ng-click="showAdd($event)" flex flex-md="100">add expense</md-button>
-</div>
+</md-card>
+  <md-button class="md-fab md-primary" ng-click="showAdd($event)" flex flex-md="100">+</md-button>
+</md-content>
