--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
       <script src="bower_components/angular-resource/angular-resource.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/cucumber/release/cucumber.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/Chart.js/Chart.js"></script>
       <script src="bower_components/tc-angular-chartjs/dist/tc-angular-chartjs.min.js"></script>
