--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/directives/expenseCard/expenseCard.css">
       <link rel="stylesheet" href="app/expense/expense.css">
       <link rel="stylesheet" href="app/income/income.css">
       <link rel="stylesheet" href="app/main/main.css">
@@ -85,6 +86,7 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/directives/expenseCard/expenseCard.directive.js"></script>
           <script src="app/expense/expense.controller.js"></script>
           <script src="app/expense/expense.js"></script>
           <script src="app/income/income.controller.js"></script>
